<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".CadastroFragment" android:id="@+id/frameLayout5">
    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtnome" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtnome"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintBottom_toTopOf="@+id/email2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email2"
            app:layout_constraintTop_toBottomOf="@+id/txtnome"
            app:layout_constraintBottom_toTopOf="@+id/txtemail2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtemail2"
            app:layout_constraintTop_toBottomOf="@+id/email2"
            app:layout_constraintBottom_toTopOf="@+id/senha2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/senha2"
            app:layout_constraintTop_toBottomOf="@+id/txtemail2"
            app:layout_constraintBottom_toTopOf="@+id/txtsenha2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtsenha2"
            app:layout_constraintTop_toBottomOf="@+id/senha2"
            app:layout_constraintBottom_toTopOf="@+id/cadastrar2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cadastrar2"
            app:layout_constraintTop_toBottomOf="@+id/txtsenha2"
            app:layout_constraintBottom_toTopOf="@+id/login2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <Button
            android:text="@string/logar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/cadastrar2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>