<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LoginFragment" android:id="@+id/frameLayout2"
                                                   android:background="#21F3C9">
    <TextView
            android:text="@string/email"
            android:layout_width="57dp"
            android:layout_height="24dp"
            android:id="@+id/email" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/txtemail"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" android:background="#00E8FD" android:textSize="18sp"
            android:gravity="center" android:textColor="#000000"/>
    <TextView
            android:text="@string/senha"
            android:layout_width="84dp"
            android:layout_height="31dp"
            android:id="@+id/senha"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtemail"
            app:layout_constraintBottom_toTopOf="@+id/txtsenha"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" android:background="#00E8FD" android:gravity="center"
            android:textSize="18sp" android:textColor="#000000"/>
    <Button
            android:text="@string/logar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btLoginLog" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtsenha" app:layout_constraintBottom_toTopOf="@+id/btCadastrarLogin"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" android:background="#00FFF6"/>
    <Button
            android:text="@string/cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCadastrarLogin"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLoginLog"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" android:background="#00FFF6"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtemail"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintBottom_toTopOf="@+id/senha"
            app:layout_constraintVertical_chainStyle="packed"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtsenha"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/senha"
            app:layout_constraintBottom_toTopOf="@+id/btLoginLog"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
    <ImageView
            android:src="@drawable/login"
            android:layout_width="33dp"
            android:layout_height="38dp"
            android:id="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/btLoginLog" app:layout_constraintStart_toEndOf="@+id/btLoginLog"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"/>
    <ImageView
            android:src="@drawable/cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/btCadastrarLogin" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/btCadastrarLogin" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:src="@drawable/q"
            android:layout_width="61dp"
            android:layout_height="68dp"
            android:id="@+id/imageView8" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.365" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/email"/>
    <ImageView
            android:src="@drawable/u"
            android:layout_width="51dp"
            android:layout_height="55dp"
            android:id="@+id/imageView9" android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="@+id/imageView8" app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/imageView10" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.23"/>
    <ImageView
            android:src="@drawable/i"
            android:layout_width="50dp"
            android:layout_height="55dp"
            android:id="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView8" android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>
    <ImageView
            android:src="@drawable/z"
            android:layout_width="49dp"
            android:layout_height="55dp"
            android:id="@+id/imageView11"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="112dp"
            android:layout_marginRight="112dp"
            app:layout_constraintStart_toStartOf="@+id/imageView10" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.555"/>
</androidx.constraintlayout.widget.ConstraintLayout>